<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/MainText"
        android:text="@string/who_created_sw" />

    <RadioGroup
        android:id="@+id/radio_group_creator"
        style="@style/MainRadioGroup">

        <RadioButton
            android:id="@+id/creator_lucas"
            style="@style/MainCheckboxRadio"
            android:text="@string/george_lucas" />

        <RadioButton
            android:id="@+id/creator_spielberg"
            style="@style/MainCheckboxRadio"
            android:text="@string/steven_spielberg" />

        <RadioButton
            android:id="@+id/creator_disney"
            style="@style/MainCheckboxRadio"
            android:text="@string/walt_disney" />

    </RadioGroup>
</merge>